tests/errors/substructural/check/multiple_returns_each_checked.sim

        struct Linear { r: &out i64 }
        fn f(b: bool, x: Linear) {
            entry:
            branch(copy b) [true: t, false: fbr]
            t: return
            fbr: return
        }
        